--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset= "utf-8">
   <title>piyopiyo</title>
   <link rel ="stylesheet" href="style.css">
-    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery.bgswitcher.js"></script>
+    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+    <script src="jquery.bgswitcher.js"></script>
 
    <script>
 jQuery(function($) {
