--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ jQuery(function($) {
 </head>
 <body>
 <!--ヘッダーここから-->
-  <div class= "header">
+  <div id= "header">
 <div class="header-logo">PiyoPhoto</div>
 <div class="header-right">
 <ul>
