--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@ jQuery(function($) {
   <li><a href="#" class="icon">Contact</a></li>
   <li><a href="#">Gallary</a></li>
   <li><a href="#">Profile</a></li>
-
-</ul>
+  <li><a href="#">News</a></li>
+  <li><a href="#">Home</a></li>
+ </ul>
 </div>
     <!--ヘッダーここまで -->
 
