--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ jQuery(function($) {
   <li><a href="#"><img src="https://github.com/sakura130/piyophoto/blob/hogehoge/face.jpg?raw=true"></a></li>
   <li><a href="#" class="icon">Contact</a></li>
   <li><a href="#">Gallary</a></li>
-  <li><a href="#">Profile</a></li>
+  <li><a href="profile.html">Profile</a></li>
   <li><a href="#">News</a></li>
   <li><a href="#">Home</a></li>
  </ul>
