profile.html up

--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,7 @@ jQuery(function($) {
 </div>
 
   <div id="side">
-<img src="img/profile.jpg" alt="profile-img" class="profile_img">
+<img src="profile.jpg" alt="profile-img" class="profile_img">
 
 
 <div class="side_message">
