profile.html up

--- a/profile.html
+++ b/profile.html
@@ -28,13 +28,13 @@ jQuery(function($) {
     <li><a href="#">Gallary</a></li>
     <li><a href="profile.html">Profile</a></li>
     <li><a href="#">News</a></li>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="https://sakura130.github.io/piyophoto/">Home</a></li>
    </ul>
   </div>
 </div>
 
   <div id="side">
-<img src="profile.jpg" alt="profile-img" class="profile_img">
+<img src="https://github.com/sakura130/piyophoto/blob/master/profile.jpg?raw=true" alt="profile-img" class="profile_img">
 
 
 <div class="side_message">
