--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset= "utf-8">
   <title>piyopiyo</title>
-  <link rel ="stylesheet" href="css/style.css">
+  <link rel ="stylesheet" href="style.css">
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
     <script src="jquery.bgswitcher.js"></script>
 
