profile.html up

--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,7 @@ jQuery(function($) {
 </div>
 
   <div id="side">
-<img src="https://github.com/sakura130/piyophoto/blob/master/profile.jpg?raw=true" alt="profile-img" class="profile_img">
+
 
 
 <div class="side_message">
@@ -45,6 +45,11 @@ jQuery(function($) {
 <p>　Comment：Thanking you in advance<br /></p>
 
   </div>
+
+  <div class="side_img">
+	  <img src="https://github.com/sakura130/piyophoto/blob/hogehoge/profile.jpg?raw=true" alt="profile-img" class="profile_img">
+  </div>
+
 </div>
 
 </body>
