--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <script>
 jQuery(function($) {
     $('.bg-slider').bgSwitcher({
-        images: ['https://github.com/sakura130/piyophoto/blob/hogehoge/main_3.jpg?raw=true','https://github.com/sakura130/piyophoto/blob/hogehoge/IMGP9005.JPG?raw=true','https://github.com/sakura130/piyophoto/blob/hogehoge/main_7.jpg?raw=true','https://github.com/sakura130/piyophoto/blob/hogehoge/main_8.jpg?raw=true','https://github.com/sakura130/piyophoto/blob/hogehoge/main_2.JPG?raw=true'], // 切り替える背景画像を指定
+        images: ['https://github.com/sakura130/piyophoto/blob/hogehoge/main_3.jpg?raw=true','https://github.com/sakura130/piyophoto/blob/hogehoge/IMGP9005.JPG?raw=true','https://github.com/sakura130/piyophoto/blob/hogehoge/main_7_2.jpg?raw=true','https://github.com/sakura130/piyophoto/blob/hogehoge/main_8_2.jpg?raw=true','https://github.com/sakura130/piyophoto/blob/hogehoge/main_2_2.jpg?raw=true'], // 切り替える背景画像を指定
     });
 });
 </script>
