--- a/profile.html
+++ b/profile.html
@@ -42,7 +42,7 @@ jQuery(function($) {
 <p>　Age：30<br /></p>
 <p>　Contry：Japan<br /></p>
 <p>　Hobby：Photography & Dance<br /></p>
-<p>　Comment：Thanking you in advance<br /></p>
+<p>　Comment：I will continue to do my very best, so I hope to receive your support.<br /></p>
 
   </div>
 
