index.html font link up

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset= "utf-8">
   <title>piyopiyo</title>
   <link rel ="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300|Amatic+SC:700|Anton|Bangers|Caveat|Cherry+Swash:700|Corben:700|Creepster|Economica:700|Homemade+Apple|IM+Fell+DW+Pica+SC|Kaushan+Script|Londrina+Shadow|Montserrat+Subrayada|Oswald:700|Permanent+Marker|Quicksand|Roboto+Condensed:700|Teko|Vollkorn" rel="stylesheet">
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
     <script src="jquery.bgswitcher.js"></script>
 
